# ISE_Coursework_AI_Model_Fairness_Testing

./: .gitmodules  LICENSE  README.md  improved_experiment.py  improved_experiment_raw.csv  improved_experiment_results.csv  main.py  manual.md  pyproject.toml  quick_test.py  replication.md  requirements.txt  statistical_test_results.csv
