[project]
name = "ise-coursework-ai-model-fairness-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
]
